fix: adjust card container styles and update title spacing

--- a/frontend/src/components/CardContainer/CardContainer.css
+++ b/frontend/src/components/CardContainer/CardContainer.css
@@ -1,15 +1,14 @@
 .card-container {
-  columns: 4;
-  column-gap: 10px;
   margin: 10px;
   padding: 10px;
-  width: 600px;
+  width: 450px;
   border-radius: 20px;
   border: 1px solid #f5f5dc;
   justify-content: center;
 }
 
 .card {
+  width: 100px;
   padding: 10px;
   margin-bottom: 10px;
   border-radius: 20px;
